# persistent-vector

./: CMakeLists.txt  Makefile  README.md  task.cc
data/: tests.sh
src/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt  PersistentVector.cc  PersistentVector.hh  PersistentVectorBlock.cc  PersistentVectorBlock.hh
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/lib/: CMakeLists.txt
tests/unit/lib/storage/: CMakeLists.txt  PersistentVectorTest.cc
